kubernetes/apps/dev/gitea/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - gitea.g-eye.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea-http
          port: 3000
